Los cambios que se hicieron fueron: Cambiar el apartado de Nuestros productos, añadiendo categorias y mejorando la presentacion.

--- a/Devops/css/styles.css
+++ b/Devops/css/styles.css
@@ -1,4 +1,4 @@
-/*Estilo para toda la pagina */
+/* Estilo para toda la pagina */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -39,7 +39,6 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
-/* Estilo para el botón de regreso */
 .back-button {
     text-decoration: none;
     background-color: #ff5757;
@@ -53,7 +52,6 @@ nav ul li a:hover {
     background-color: #d94c4c;
 }
 
-/* Estilo para los productos */
 .products {
     text-align: center;
     padding: 50px 20px;
@@ -84,7 +82,6 @@ nav ul li a:hover {
     transform: scale(1.05);
 }
 
-
 footer {
     text-align: center;
     padding: 15px;
@@ -92,3 +89,65 @@ footer {
     color: white;
     margin-top: 50px;
 }
+
+.category-buttons {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.category-btn {
+    background-color: #ff4d00;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    margin: 5px;
+    font-size: 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.category-btn:hover {
+    background-color: #d63c00;
+    transform: scale(1.05); 
+}
+
+.category-btn:active {
+    background-color: #b32d00;
+    transform: scale(0.98);
+}
+
+    .category-buttons {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    /* Estilos de los Botones */
+    .category-btn {
+        background-color: darksalmon;
+        color: white;
+        border: none;
+        padding: 12px 20px;
+        font-size: 18px;
+        border-radius: 25px;
+        cursor: pointer;
+        transition: 0.3s;
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+        font-weight: bold;
+    }
+
+    /* Efectos al pasar el mouse */
+    .category-btn:hover {
+        background-color: darksalmon ;
+        transform: scale(1.1);
+    }
+
+    /* Efecto al hacer clic */
+    .category-btn:active {
+        background-color: darksalmon;
+        transform: scale(0.95);
+    }
