--- a/Devops/css/styles.css
+++ b/Devops/css/styles.css
@@ -152,7 +152,7 @@ footer {
         transform: scale(0.95);
     }
 
-    /* Fondo de contacto */
+    /* Contacto style */
     .contact {
         max-width: 600px;
         margin: 50px auto;
