--- a/Devops/css/styles_2.css
+++ b/Devops/css/styles_2.css
@@ -1,63 +1,261 @@
-/* Reinicio general */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-/* Estilos para el body */
+/* Estilo para toda la pagina */
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: #ffebee;
-    background-image: url('/Dulceria_Equipo5/Devops/src/WhatsApp\ Image\ 2025-03-17\ at\ 8.03.25\ PM.jpeg');
+    margin: 0;
+    padding: 0;
+    background-color: #fff3e6;
+    color: #333;
 }
 
-/* Estilos para el header */
 header {
-    position: sticky;
-    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
     background-color: #ff8c8c;
-    color: #fff;
-    padding: 10px 0;
-    z-index: 10;
-    width: 100%;
-    box-shadow: 0 4px 2px -2px gray;
 }
 
-header .logo img {
-    height: 60px;
-    width: auto;
-    margin-left: 20px;
-}
-
+/* Menu */
 nav ul {
     list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+    padding: 0;
 }
 
 nav ul li {
-    padding: 5px 10px;
+    display: inline;
+    margin-right: 15px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: #fff;
-    font-size: 18px;
+    color: white;
     font-weight: bold;
-    transition: color 0.3s ease;
+    padding: 10px;
 }
 
 nav ul li a:hover {
-    color: #ff5e5e;
+    background: #d94c4c;
+    padding: 10px;
+    border-radius: 5px;
 }
 
+.back-button {
+    text-decoration: none;
+    background-color: #ff5757;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.back-button:hover {
+    background-color: #d94c4c;
+}
+
+.products {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 15px;
+    max-width: 800px;
+    margin: auto;
+}
+
+.product {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s;
+}
+
+.product img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.product:hover {
+    transform: scale(1.05);
+}
+
+footer {
+    text-align: center;
+    padding: 15px;
+    background-color: #ff8c8c;
+    color: white;
+    margin-top: 50px;
+}
+
+.category-buttons {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.category-btn {
+    background-color: #ff4d00;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    margin: 5px;
+    font-size: 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.category-btn:hover {
+    background-color: #d63c00;
+    transform: scale(1.05); 
+}
+
+.category-btn:active {
+    background-color: #b32d00;
+    transform: scale(0.98);
+}
+
+    .category-buttons {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    /* Estilos de los Botones */
+    .category-btn {
+        background-color: darksalmon;
+        color: white;
+        border: none;
+        padding: 12px 20px;
+        font-size: 18px;
+        border-radius: 25px;
+        cursor: pointer;
+        transition: 0.3s;
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+        font-weight: bold;
+    }
+
+    /* Efectos al pasar el mouse */
+    .category-btn:hover {
+        background-color: darksalmon ;
+        transform: scale(1.1);
+    }
+
+    /* Efecto al hacer clic */
+    .category-btn:active {
+        background-color: darksalmon;
+        transform: scale(0.95);
+    }
+
+    /* Fondo de contacto */
+    .contact {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .contact h2 {
+        color: #ff8c8c;
+        margin-bottom: 20px;
+    }
+    .contact label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+        color: #333;
+    }
+    .contact input[type="text"],
+    .contact input[type="email"],
+    .contact input[type="date"],
+    .contact textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+.contact textarea {
+    resize: vertical;
+    height: 150px;
+}
+.contact button[type="submit"] {
+    background-color: #ff8c8c;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+.contact button[type="submit"]:hover {
+    background-color: #d94c4c;
+
+}
+.contact button[type="submit"]:active {
+    background-color: #b32d00;
+    transform: scale(0.98);
+}
+/* Usuario style */
+.Usuarios {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.Usuarios h2 {
+    color: #ff8c8c;
+    margin-bottom: 20px;
+}
+.Usuarios label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+.Usuarios input[type="text"],
+.Usuarios input[type="email"],
+.Usuarios input[type="date"],
+.Usuarios input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+.Usuarios button[type="submit"] {
+    background-color: #ff8c8c;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 18px;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+.Usuarios button[type="submit"]:hover {
+    background-color: #d94c4c;
+}
+
+.Usuarios button[type="submit"]:active {
+    background-color: #b32d00;
+    transform: scale(0.98);
+}
 /* Estilos para la sección hero */
 .hero {
     background-image: url('/Devops/src/hero-image.jpg');
@@ -80,7 +278,6 @@ nav ul li a:hover {
 .hero-content p {
     font-size: 1.5rem;
 }
-
 /* Estilos para el footer */
 footer {
     background-color: #ff8c8c;
@@ -147,4 +344,15 @@ footer ul.social-links li a:hover {
     max-width: 20%;
     height: auto;
     border-radius: 8px;
+}
+
+/* Estilos para el body */
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: #ffebee;
+    background-image: url('/Dulceria_Equipo5/Devops/src/WhatsApp\ Image\ 2025-03-17\ at\ 8.03.25\ PM.jpeg');
 }
